# pykonf

./: AGENTS.md  Dockerfile  Readme.md  api.py  pyproject.toml  requirements.txt  test_api.sh
js-client/: README.md  index.html  index.js
src/pykonf/: __init__.py  __main__.py  admin.py  api.py  config.py  mcp.py
tests/: conftest.py  test_api.py  test_config.py  test_mcp.py
