[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pykonf"
version = "0.2.0"
description = "Simple HTTP API to manage client configuration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.92.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "slowapi>=0.1.7",
]

[project.optional-dependencies]
admin = ["nicegui>=1.2.4"]

[project.scripts]
pykonf = "pykonf:main"

[tool.setuptools.packages.find]
where = ["src"]
